--- a/index.html
+++ b/index.html
@@ -1,15 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flight Boarding Simulation</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <title>Plane Boarding Simulation</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.svg">
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+        integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+
+    <!-- Local Script -->
     <script async defer type="module" src="js/main.js"></script>
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <!-- Local Stylesheet -->
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <canvas id="main-window" style="background-color: white;"></canvas>
+    <div class="row">
+        <div class="col-2 col-md-1 col-lg-1">
+            <img src="assets/favicon.svg" alt="logo">
+        </div>
+        <div class="col">
+            <h1 class="main-heading">Plane Boarding Simulation</h1>
+        </div>
+    </div>
+
+    <div id="config-menu">
+        <div class="row">
+
+            <div id="plane-layout-config-section" class="col-sm-12 col-md-6 config-section">
+                <h1 class="sub-heading">Plane Layout</h1>
+
+
+                <div class="row">
+                    <div class="input-group col">
+                        <div class="col-4">
+                            <input type="number" class="form-control" value="9" id="plane-rows">
+                        </div>
+
+                        <div class="input-group-append">
+                            <span class="input-group-text">rows</span>
+                        </div>
+                    </div>
+                    <div class="input-group col">
+                        <div class="col-4">
+                            <input type="number" class="form-control" value="6" id="plane-cols">
+                        </div>
+
+                        <div class="input-group-append">
+                            <span class="input-group-text">columns</span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="input-group">
+                        <div class="input-group-prepend col-6">
+                            <span class="input-group-text">aisle in column</span>
+                        </div>
+                        <div class="col-2">
+                            <input type="number" class="form-control" value="4" id="aisle-col">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div id="passenger-behaviour-config-section" class="col-sm-12 col-md-6 config-section">
+                <h1 class="sub-heading">Passenger Behaviour</h1>
+                <div class="row">
+                    <div class="input-group">
+                        <div class="input-group-prepend col-sm-2 col-md-3 col-lg-2">
+                            <span class="input-group-text">travel at</span>
+                        </div>
+                        <div class="col-2">
+                            <input type="number" class="form-control" value="1" id="move-speed">
+                        </div>
+                        <div class="input-group-append col">
+                            <span class="input-group-text">seats per second</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-group">
+                        <div class="input-group-prepend col-3">
+                            <span class="input-group-text">shuffle time</span>
+                        </div>
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">~ N(</span>
+                        </div>
+                        <div class="col-2"><input type="number" class="form-control" value=1 id="shuffle-mean"></div>
+                        <div class="input-group-append">
+                            <span class="input-group-text">,</span>
+                        </div>
+                        <div class="col-2"><input type="number" class="form-control" value="0" id="shuffle-dev"></div>
+                        <div class="input-group-append">
+                            <span class="input-group-text"><sup>2</sup>)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-group">
+                        <div class="input-group-prepend col-3">
+                            <span class="input-group-text">store time</span>
+                        </div>
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">~ N(</span>
+                        </div>
+                        <div class="col-2"><input type="number" class="form-control" value="1" id="store-mean"></div>
+                        <div class="input-group-append">
+                            <span class="input-group-text">,</span>
+                        </div>
+                        <div class="col-2"><input type="number" class="form-control" value="0" id="store-dev"></div>
+                        <div class="input-group-append">
+                            <span class="input-group-text"><sup>2</sup>)</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div id="boarding-strategy-config-section" class="col-sm-12 col-md-6 config-section">
+                <h1 class="sub-heading">Boarding Strategy</h1>
+                <div class="row"><select class="form-select" id="strategy">
+                        <option selected value="random">Random Boarding</option>
+                        <option value="fronttoback">Front-To-Back Boarding</option>
+                        <option value="backtofront">Back-To-Front Boarding</option>
+                        <option value="reversepyramid">Reverse Pyramid Boarding</option>
+                        <option value="steffenperfect">Steffen Perfect Boarding</option>
+                    </select></div>
+            </div>
+
+            <div id="animation-speed-config-section" class="col-sm-12 col-md-6 config-section">
+                <h1 class="sub-heading">Animation Speed</h1>
+                <div class="row">
+                    <div class="input-group">
+                        <div class="col-2"><input type="number" class="form-control" value="1" id="animation-speed">
+                        </div>
+                        <div class="input-group-append col">
+                            <span class="input-group-text">x</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <h1 id="start-txt" class="text-center">start</h1>
+    </div>
+
+    <div id="simulation-section">
+        <div class="row align-items-center">
+            <div class="col-1">
+                <img src="assets/back-arrow.svg" alt="back" id="back-btn">
+            </div>
+            <div class="col">
+                <canvas id="main-window"></canvas>
+            </div>
+        </div>
+
+    </div>
+
+
+    <!-- <footer>
+        <p class="text-center">
+            <span class="footer-link">
+                Created by Charlie Taylor
+            </span>
+            <span class="footer-link">
+                GitHub Repository
+            </span>
+            <span class="footer-link">
+                Published 04/23
+            </span>
+        </p>
+    </footer> -->
 </body>
+
 </html>
