--- a/index.html
+++ b/index.html
@@ -180,6 +180,113 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="input-group">
+                <div class="col-12 col-md-4 col-lg-4 data-section">
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="total-passengers"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">total passengers</span>
+                        </div>
+                    </div>
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="seated-passengers"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">seated passengers</span>
+                        </div>
+                    </div>
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="percentage-seated"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">% seated</span>
+                        </div>
+                    </div>
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="passengers-waiting"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">passengers waiting</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 col-lg-4 data-section">
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="time-elapsed"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">time elapsed</span>
+                        </div>
+                    </div>
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="avg-boarding-time"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">avg boarding time</span>
+                        </div>
+                    </div>
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="total-time-waiting"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">total time waiting</span>
+                        </div>
+                    </div>
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="avg-time-waiting"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">avg time waiting</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 col-lg-4 data-section">
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="seat-shuffles"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">seat shuffles</span>
+                        </div>
+                    </div>
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="avg-seat-shuffles"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">avg seat shuffles</span>
+                        </div>
+                    </div>
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="storage-stops"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">storage stops</span>
+                        </div>
+                    </div>
+                    <div class="row input-group">
+                        <div class="col-3"><input type="number" class="form-control" value="0" id="avg-storage-stops"
+                                readonly>
+                        </div>
+                        <div class="col-9">
+                            <span class="input-group-text">avg storage stops</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 
