update favicon to have white background

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Plane Boarding Simulation</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
