add zoom feature

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <button id="key-btn" data-bs-toggle="modal" data-bs-target="#modal">key</button>
             </div>
             <div class="col-8">
-                <input type="range" class="form-range">
+                <input type="range" class="form-range" min="1" max="100" value=100 id="scale-range">
             </div>
         </div>
 
